// 大厅

syntax = "proto3";

package pb;

option go_package = ".;pb";

import "internal/pb/common.proto";

// 大厅的数据
message HallBin {
  int32 LastLandId = 2;
  string LoginClientVersion = 4; // 上次登陆的版本
  int32 BuildLevel = 5;          //建设度
  int32 MaxBuildLevel = 6;       //玩家曾经抵达过的最大的建设度
  int64 LastMassMail = 10;
	int64 ActivityRoomExpireTs = 11;
	repeated int32 ActivityRoomList = 12;
}


message ClientVersion {
  // 版本 1.12.123.1234_r,1.12.123.1234_d,1.12.123.1234
  string Version = 1;
  // 奖励 [[1102,1000],[1104,2000]]
  string Reward = 2;
  string ChanId = 3;
  string Title = 4;
  string Body = 5;
  string Type = 6;
  int32 Uid = 7;
  repeated Bundle Bundles = 8;
}

message ClientVersionResp { repeated ClientVersion List = 1; }

message Mail {
  int64 Id = 1;
  int32 Type = 2;
  int32 SendId = 3;
  int32 RecvId = 4;
  string Title = 5;
  string Body = 6;
  string Reward = 7;
  int32 Status = 8;
  string SendTime = 9;
  repeated string EffectTime = 10;
  repeated string RegTime = 11;
  repeated string LoginTime = 12;
  string ClientVersion = 13;
}

message MailReq {
  int64 Id = 1;
  int32 Type = 2;
  int32 RecvId = 3;
  int32 Num = 4;
  Mail Mail = 5;
  int32 Status = 6;
}

message MailResp {
  int64 Id = 1;
  Mail Mail = 2;
  repeated Mail List = 3;
}

message BindAccountResp {
  int32 UId = 1;
  repeated string Plates = 2;
}

message EditableUserInfo {
	int32 UId = 1;
	string Nickname = 2;
	string Icon = 3;
	int32 VIP = 4;
	int32 Sex = 5;
  string Email = 6;
}