// 登陆

syntax = "proto3";

package pb;

option go_package=".;pb";

// 账号信息
message AccountInfo {
	int32 UId = 1;
	string Plate = 2;
	string OpenId = 3;
	string Method = 4;
	string NewPassword = 5;
	string ChanId = 9;
	string Nickname = 10;
	int32 Sex = 11;
	string Icon = 13;
	string Imsi = 14;
	string Imei = 15;
	string Mac = 16;
	string Phone = 17;
	string OS = 18;
	string NetMode = 19;
	string Version = 20;
	string PhoneBrand = 21;
	string IDFA = 24; // IOS设备标识
	int32 SubId = 25;
	string IP = 26;
	string PlateIcon = 30;
}

message CreateAccountReq {
	AccountInfo AccountInfo = 1;
}

message CreateAccountResp {
	int32 UId = 1;
	int32 NewId = 2;
	string ChanId = 3;
}

message LoginParams {
	string DistinctId = 1;
	double TimeZone = 2;
}

message LoginParamsReq {
	int32 UId = 1;
	LoginParams Params = 2;
}

message BindAccountReq {
	string ReserveOpenId = 1;
	string AddPlate = 2;
	string AddOpenId = 3;
	bool IsReward = 4;
}
